[gd_scene load_steps=11 format=3 uid="uid://bk0katloxa5nl"]

[ext_resource type="Script" uid="uid://ysttt7ma8je7" path="res://Systems/MapChanger System/portal.gd" id="1_eff8i"]
[ext_resource type="Shader" uid="uid://beib55g20ff5m" path="res://Assets/PostProcessingEffects/portal.gdshader" id="3_kf7w2"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ydb4i"]
radius = 0.939
height = 10.65

[sub_resource type="FastNoiseLite" id="FastNoiseLite_ydb4i"]
frequency = 0.0011
fractal_type = 3

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_tvc24"]
seamless = true
noise = SubResource("FastNoiseLite_ydb4i")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_tvc24"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_kf7w2"]
noise = SubResource("FastNoiseLite_tvc24")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x8dxn"]
render_priority = 21
shader = ExtResource("3_kf7w2")
shader_parameter/size = 1.12
shader_parameter/background_color = Color(0, 0, 0, 0.517647)
shader_parameter/primary_color = Color(5.58317e-06, 0.752069, 0.76111, 1)
shader_parameter/secondary_color = Color(0, 0.765639, 0.652952, 0.517647)
shader_parameter/noise_texture = SubResource("NoiseTexture2D_tvc24")
shader_parameter/primaryColorChange = SubResource("NoiseTexture2D_kf7w2")
shader_parameter/cutoff = 1.0
shader_parameter/primary_cutoff = 0.406

[sub_resource type="BoxShape3D" id="BoxShape3D_vyrqw"]
size = Vector3(5.4043, 8.93262, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ydb4i"]
height = 9.76685
radius = 35.0

[node name="Portal" type="Node3D"]
script = ExtResource("1_eff8i")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(2.29999, 0, 0, 0, 0.765793, 0, 0, 0, 1, 0, 1.15614, 0)
mesh = SubResource("CapsuleMesh_ydb4i")
surface_material_override/0 = SubResource("ShaderMaterial_x8dxn")

[node name="PortalTrigger" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="PortalTrigger"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0265198, 1.1096, 0)
shape = SubResource("BoxShape3D_vyrqw")

[node name="PortalNerbyTrigger" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="PortalNerbyTrigger"]
shape = SubResource("CylinderShape3D_ydb4i")

[connection signal="body_entered" from="PortalTrigger" to="." method="load_scene"]
[connection signal="body_entered" from="PortalNerbyTrigger" to="." method="_on_portal_nerby_trigger_body_entered"]
[connection signal="body_exited" from="PortalNerbyTrigger" to="." method="_on_portal_nerby_trigger_body_exited"]
